# annif-bill-committees-us

./: .gitignore  README.adoc  annif_bill-committees-us_chrono.ipynb  annif_bill-committees-us_regular_split.ipynb  committees.csv  dataset-to-copus.ipynb  projects.cfg  pyproject.toml  requirements.txt  spacy_multi_label.ipynb  st_annif.py
cli/: gc_move_data.py
